--- a/index.html
+++ b/index.html
@@ -113,8 +113,8 @@
                 alt="Education icon"
                 class="icon"
               />
-              <h3>Education</h3>
-              <p>Web Development <br />Udemy<br />Aug 2023 - Jan 2024</p>
+              <h3>Internship</h3>
+              <p>Web Development <br />Oasis Infobyte<br />June 2024 - July 2024</p>
             </div>
           </div>
           <div class="text-container">
@@ -274,7 +274,7 @@
                 <div class="btn-container">
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/'"
+                    onclick="location.href='https://github.com/ashis023/ASHIS.PORTFOLIO'"
                   >
                     Github
                   </button>
