--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
                   </button>
                   <button
                     class="btn btn-color-2 project-btn"
-                    onclick="location.href='https://github.com/'"
+                    onclick="location.href='https://ashis-portfolio.netlify.app/'"
                   >
                     Live Demo
                   </button>
